--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div id="loading" class="loading" style="display:none;">Scanning in progress…</div>
     <pre id="result" class="result"></pre>
   </div>
-  <script src="script-debug.js"></script>
+  <script src="script.js"></script>
 </body>
 </html> 
